--- a/components/github-tests-dotnet-basic-hvjtmloe/overlays/development/deployment-patch.yaml
+++ b/components/github-tests-dotnet-basic-hvjtmloe/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: github-tests-dotnet-basic-hvjtmloe
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-tssc/task-runner:1.8
-        name: container-image  
+        - image: quay.io/rhtap_qe/github-tests-dotnet-basic-hvjtmloe:f2af3ee2d4fa3aa68ade29f09f77fd67bb677e5a@sha256:79ed0efec63b47317cf2d5b195380b99dd8552afa82638ab1d2c612fdf9365c2
+          name: container-image
